[package]
name = "vicky3-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
nightly = []

[dependencies]
sis = { path = "sis" }
cfg-if = "1.0.0"
into_string = "2.0.0"
itertools = "0.10.5"
jomini = "0.21.0"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
pin-project-lite = "0.2.9"
elor = "1.1.3"

[workspace]
members = ["sis"]
