[package]
name = "vicky3-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
nightly = ["float_to_int/nightly"]

[dependencies]
sis = { path = "sis" }
cfg-if = "1.0.0"
into_string = "2.0.0"
itertools = "0.10.5"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
pin-project-lite = "0.2.9"
elor = { version = "1.1.3", features = ["serde", "serialize", "futures"] }
serde-value = "0.7.0"
serde-bridge = "0.0.3"
jomini = "0.21.0"
half = { version = "2.2.0", features = ["serde"] }
float_to_int = { version = "0.1.0", features = ["half"] }
rayon = "1.6.1"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
eframe = "0.20.1"
anyhow = "1.0.68"
rfd = "0.10.0"

[workspace]
members = ["sis", "sis/sis_proc"]
